5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1764_762.log
== TEST (2019-05-24 18:26:11) 
-- CODE:
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:3]
im = int(data[3:5]) #indica o numero correspondente ao mes
ano = data[5:]
mes = vet_mes[im-1]
print(dia + mes + ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:26:45) 
-- CODE:
from numpy import *

data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:3]
im = int(data[3:5]) #indica o numero correspondente ao mes
ano = data[5:]
mes = vet_mes[im-1]
print(dia + mes + ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:28:42) 
-- CODE:
from numpy import *

data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:3]
im = int(data[3:4]) #indica o numero correspondente ao mes
ano = data[5:]
#mes = vet_mes[im-1]
print(dia)
print(im)
print(ano)
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:29:03) 
-- CODE:
from numpy import *

data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:3]
im = int(data[3:4]) #indica o numero correspondente ao mes
ano = data[5:]
#mes = vet_mes[im-1]
print(dia)
print(im)
print(ano)
#print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:29:38) 
-- CODE:
from numpy import *

data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:2]
im = int(data[3:4]) #indica o numero correspondente ao mes
ano = data[5:]
#mes = vet_mes[im-1]
print(dia)
print(im)
print(ano)
#print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:30:49) 
-- CODE:
from numpy import *

data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:2]
im = int(data[3:4]) #indica o numero correspondente ao mes
ano = data[4:]
#mes = vet_mes[im-1]
print(dia)
print(im)
print(ano)
#print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:31:42) 
-- CODE:
from numpy import *

data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:2]
im = int(data[3:4]) #indica o numero correspondente ao mes
ano = data[4:]
mes = vet_mes[im-1]
print(dia)
print(im)
print(ano)
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:32:49) 
-- CODE:
from numpy import *

data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:2]
im = int(data[3:4]) #indica o numero correspondente ao mes
ano = data[4:]
mes = vet_mes[im-1]
print(dia, "de", mes, "de", ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:33:05) 
-- CODE:
from numpy import *

data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:2]
im = int(data[3:4]) #indica o numero correspondente ao mes
ano = data[4:]
mes = vet_mes[im-1]
print(dia, "de", mes, "de", ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 18:33:21) 
-- CODE:
from numpy import *

data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:2]
im = int(data[3:4]) #indica o numero correspondente ao mes
ano = data[4:]
mes = vet_mes[im-1]
print(dia, "de", mes, "de", ano)
-- EXECUTION TIME:
0.559932
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de janeiro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:33:58) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

dia = data[:2]
im = int(data[3:4]) #indica o numero correspondente ao mes
ano = data[4:]
mes = vet_mes[im-1]
print(dia, "de", mes, "de", ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:35:37) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#dia = data[:2]
im = int(data[3:4]) #indica o numero correspondente ao mes
#ano = data[4:]
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:36:31) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:36:46) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:37:11) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:37:24) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:37:38) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:38:53) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:39:09) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:39:20) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:39:28) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:39:40) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:39:53) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:40:03) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:40:18) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[3:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:13:45) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:3])
print(data[3:5])
print(data[5:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:14:20) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[0:3])
print(data[3:5])
print(data[5:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:14:44) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(data[3:5])
print(data[5:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:15:10) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(data[2:4])
print(data[5:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:15:31) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(data[2:4])
print(data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:15:46) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(data[2:4])
print(data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:16:08) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(data[2:4])
print(data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:16:29) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:17:08) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:17:24) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:17:29) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:17:52) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:18:12) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
#im = int(data[3:5]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:18:51) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[2:4]) #indica o numero correspondente ao mes
#mes = vet_mes[im-1]
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
print(im)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:19:42) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[2:4]) #indica o numero correspondente ao mes
mes = im-1
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
print(im)
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:19:53) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
#vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[2:4]) #indica o numero correspondente ao mes
mes = im-1
#print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
print(im)
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:20:32) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[2:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
print(im)
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:20:43) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[2:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])
print(data[:2])
print(int(data[2:4]))
print(data[4:])
print(im)
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:21:07) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[2:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:21:20) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[2:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 19:21:31) 
-- CODE:
from numpy import *
data = input("Digite uma data no formato ddmmaaaa: ")
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
im = int(data[2:4]) #indica o numero correspondente ao mes
mes = vet_mes[im-1]
print(data[:2], "de", mes, "de", data[4:])

-- EXECUTION TIME:
0.525796
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
